// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`route stats baseline > blog 1`] = `
{
  "crossings": 0,
  "totalVLength": 8,
}
`;

exports[`route stats baseline > questionnaire 1`] = `
{
  "crossings": 4,
  "totalVLength": 95,
}
`;

exports[`route stats baseline > snowflake-pinned 1`] = `
{
  "crossings": 0,
  "totalVLength": 16,
}
`;

exports[`route stats baseline > star-default 1`] = `
{
  "crossings": 0,
  "totalVLength": 30,
}
`;
